# array-api-typing

./: pyproject.toml
src/array_api_typing/: __init__.py  _version.py
